<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="picture">ナンバープレートを撮影する</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="ImageView">ImageView</string>
    <string name="number_plate">ナンバープレートを取る</string>
    <string name="go_back">GO BACK</string>
    <string name="show_taken_picture_1">撮影した写真を表示(1/4)</string>
    <string name="show_taken_picture_2">撮影した写真を表示(2/4)</string>
    <string name="show_taken_picture_3">撮影した写真を表示(3/4)</string>
    <string name="show_taken_picture_4">撮影した写真を表示(4/4)</string>
    <string name="description_for_read_image">写真を撮影後、「撮影した写真を表示」ボタンをタップし、写真を表示させてください。</string>
    <string name="image_picker_error">画像データが壊れている可能性があります。再度撮影の上お試しください。</string>
    <string name="loading_ocr">画像読み込み処理実行中…ボタン操作をしないでください。</string>
    <string name="AFKwarn1">道路標識により駐（停）車を禁止する場所</string>
    <string name="AFKwarn2">停車及び駐車を禁止する場所</string>
    <string name="AFKwarn3">法定の駐車禁止場所</string>
    <string name="AFKwarn4">無余地場所</string>
    <string name="AFKwarn5">停車又は駐車の方法に従わない駐車</string>
    <string name="AFKwarn6">時間制限駐車区間（パーキング・メーター設置区間）における駐車</string>
    <string name="AFKwarn7">高齢運転者等専用駐車区間における駐車</string>
    <string name="AFKsend">印刷プレビューに進む</string>
    <string name="toAFKInput">放置態様入力画面に移動</string>
    <string name="printPDF">PDFを発行する</string>
    <string name="description_for_create_pdf">上記標章画像に問題が無ければ、下にある[PDFを発行する]ボタンを押してください。</string>
    <string name="user_login_title">ログインIDとPasswordを入力してください。</string>
    <string name="user_login_label_id">ユーザーID</string>
    <string name="user_login_edittext_id">IDを入力してください</string>
    <string name="user_login_label_pass">Password</string>
    <string name="user_login_edittext_pass">Passwordを入力してください</string>
    <string name="title">駐車違反取り締まり用データ登録アプリ</string>
    <string name="to_main_activity">ログイン</string>
    <string name="wrong_pass">ユーザーIDかPasswordが間違えているようです。再度入力してください。</string>
    <string name="edit_replace_ocr_result">認識が不明瞭の時はこちらに入力してください。</string>
    <string name="return2">写真撮影準備画面に戻る</string>
</resources>
