<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:textSize="18sp"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/user_login_title"/>

    <TextView
        android:id="@+id/user_login_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/user_login_label_id"/>

    <EditText
        android:id="@+id/user_login_edittext_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="130dp"
        android:hint="@string/user_login_edittext_id"/>

    <TextView
        android:id="@+id/user_login_label_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/user_login_label_pass"/>

    <EditText
        android:id="@+id/user_login_edittext_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="130dp"
        android:hint="@string/user_login_edittext_pass"/>

    <TextView
        android:id="@+id/user_login_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/to_login_and_main_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="bottom"
        android:text="@string/to_main_activity" />

</LinearLayout>